# panda

./: softmmu_template.h
hw/avatar/: configurable_machine.c
include/exec/: cpu_ldst.h  cpu_ldst_template.h
panda/include/panda/: plugin.h  tcg-utils.h
panda/plugins/: config.panda
panda/plugins/hooks3/: Cargo.toml  hooks3.h  tester.py
panda/plugins/hooks3/src/: api.rs  hook_manager.rs  hooks3.rs  lib.rs
panda/plugins/syscalls2/: syscalls2.cpp  syscalls2.h
panda/plugins/syscalls2/generated-tpl/: syscall_switch_enter.tpl
panda/src/: callbacks.c  tcg-utils.cpp
tcg/i386/: tcg-target.inc.c
