[package]
name = "hooks3"
version = "0.1.0"
authors = ["Luke Craig <Luke.Craig@ll.mit.edu>", "Jordan McLeod <Jordan.McLeod@ll.mit.edu>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
panda-re = { git = "https://github.com/panda-re/panda-rs"}


[profile.release]
opt-level = 1

[features]
default = ["x86_64"]

x86_64 = ["panda-re/x86_64"]
i386 = ["panda-re/i386"]
arm = ["panda-re/arm"]
ppc = ["panda-re/ppc"]
mips = ["panda-re/mips"]
mipsel = ["panda-re/mipsel"]
mips64 = ["panda-re/mips64"]
aarch64 = ["panda-re/aarch64"]
